Login and signup some alignment issues are fixed

--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,6 @@ p, li, button, ul {
   background: linear-gradient(90.21deg, rgba(170, 54, 124, 0.5) -5.91%, rgba(74, 47, 189, 0.5) 111.58%);
   border: 1px solid rgba(255, 255, 255, 0.5);
   font-size: 20px;
-  margin-bottom: 16px;
 }
 
 .error {
