--- a/src/components/AuthVarification/AuthVarification.css
+++ b/src/components/AuthVarification/AuthVarification.css
@@ -6,13 +6,13 @@
  display: flex;
  justify-content: center;
  align-items: center;
- margin-top: 60px;
+ margin-top: 30px;
 }
 
 .auth-form .form {
  max-width: 500px;
  width: 100%;
- height: 520px;
+ height: 560px;
  padding: 20px;
  display: flex;
  justify-content: center;
@@ -20,12 +20,11 @@
 
 .auth-form .form .tab-list {
  display: flex;
- margin-top: 10px;
- gap:40px;
+ gap:60px;
  justify-content: center;
 }
 .auth-form .form .tab-list .tabs-inside {
- padding: 10px 40px;
+ padding: 10px 45px;
  color: var(--tab-inside-color);
  border: 1px solid rgba(255, 255, 255, 0.5);
 }
