--- a/src/components/Authentication/Login/Login.css
+++ b/src/components/Authentication/Login/Login.css
@@ -1,5 +1,5 @@
 .login-form{
- margin-top: 50px;
+ margin-top: 70px;
 }
 
 .login-form form  {
